# hostcomputer

./: .gitignore  CLAUDE.md  CMakeLists.txt  TCP_JSON协议文档.md  calculator.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setup_network.bat  test_tcp_server.py  下位机ROS节点对接文档.md
deploy/systemd/: robot-video-stack.env.example  robot-video-stack.service
docs/: MediaMTX安装与systemd部署.md  development-guide.md  上位机部署说明.md  下位机视频栈使用文档.md  下位机视频栈快速启动.md  下位机视频栈配置文档.md  手柄键盘控制说明.md  机械臂专用ROS1节点开发文档.md  视频推流与摄像头管理方案.md  通信与视频链路改造计划.md
docs/开发归档/: FFmpeg开发环境安装指南.md  README.md  ROS1桥接节点本机回环计划.md  development-guide.md  下位机Bridge双层架构与调试UI计划.md  机械臂专用ROS1节点开发文档.md  视频推流与摄像头管理方案.md
resources/qml/: RobotView.qml
ros1_bridge/: CMakeLists.txt  bridge_control.yaml  bridge_control_signal_monitor.py  bridge_control_signal_monitor_gui.py  bridge_core.py  bridge_state.py  debug_events.py  host_bridge_node.py  output_adapters.py  package.xml  run_rtsp_streams_foreground.sh  start_rtsp_streams.sh  start_rtsp_streams_from_yaml.py  start_video_stack.sh  status_video_stack.sh  stop_rtsp_streams.sh  stop_video_stack.sh  video_manager.py  video_manager_ipc.py  video_manager_node.py  video_sources.example.yaml  video_sources.local.yaml  video_stack.sh
ros1_bridge/launch/: video_stack.launch
scripts/: bridge_loopback_test.py  mock_ros1_server.py  protocol_smoke_test.py  run_all_tests.sh  smoke_test.sh  sync_ros1_bridge.py  video_manager_smoke_test.py
src/communication/: CMakeLists.txt  MultiCameraReceiver.cpp  MultiCameraReceiver.h  ROS1TcpClient.cpp  ROS1TcpClient.h  SharedStructs.h  SingleCameraReceiver.cpp  SingleCameraReceiver.h  serialportmanager.cpp  serialportmanager.h  tongxun.cpp  tongxun.h
src/controller/: CMakeLists.txt  CO2DisplayWidget.cpp  CO2DisplayWidget.h  CameraGridWidget.cpp  CameraGridWidget.h  ControlPanelWidget.cpp  ControlPanelWidget.h  DisplayLayoutManager.cpp  DisplayLayoutManager.h  FfmpegRtspDecoder.cpp  FfmpegRtspDecoder.h  GamepadDisplayWidget.cpp  GamepadDisplayWidget.h  KeyboardController.cpp  KeyboardController.h  RealCameraManager.cpp  RealCameraManager.h  RobotAttitudeWidget.cpp  RobotViewModel.cpp  RobotViewModel.h  RtspPlayerWidget.cpp  RtspPlayerWidget.h  TelemetryPanelWidget.cpp  TelemetryPanelWidget.h  controller.cpp  controller.h
src/model/: CMakeLists.txt
src/parser/: CMakeLists.txt
src/utils/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h
tools/: rtsp_test_server.py
