<?xml version="1.0"?>
<package format="2">
  <name>ros1_bridge</name>
  <version>0.1.0</version>
  <description>TCP/JSON host bridge and RTSP video lifecycle manager for the lower machine.</description>

  <maintainer email="rera@example.com">rera</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
  </export>
</package>
