# ============================================
# Communication B (ŠB)
# ============================================
# L#
#   - ° CAN / Serial / TCP IŠ•„
#   - —Ć•6üňpn'
#   - « signal •60Ąpn—Ŕ Controller
#
# ĚVń
#   - ÍżĚV Qt::Core, Qt::Network, Qt::SerialPort
#   - żĚV Controller / UI / Parser
#   - « signal/slot  Controller Š
# ============================================

set(COMMUNICATION_SOURCES
    canmanager.cpp
    canmanager.h
)

# ķYď
add_library(communication_layer STATIC ${COMMUNICATION_SOURCES})

# Ģ• Qt Q‹Ć2„!W
target_link_libraries(communication_layer PUBLIC
    Qt6::Core
    Qt6::Network
    Qt6::SerialPort
)

# ĺn4áŲ+ÔĄ
target_include_directories(communication_layer PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
