# ============================================
# Model B (pn!‹B)
# ============================================
# L#
#   - : UI Đ›ďŃš„pn!‹ (QObject + Q_PROPERTY)
#   - Ç signal/slot ô° UI
#
# ťVÄ
#   - ęýťV Qt::Core
#   - ýťV Parser / Communication / Controller
#   - 1 Controller #ô° Model pn
# ============================================

set(MODEL_SOURCES
    motormodel.cpp
    motormodel.h
)

# úY“
add_library(model_layer STATIC ${MODEL_SOURCES})

# ţĄ Qt::Core
target_link_libraries(model_layer PUBLIC
    Qt6::Core
)

# ľn4‡ö+ď„
target_include_directories(model_layer PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
